source/tests/errors/invalid_assignment_target.apex
function f()
    return (a = 1)
f() = 42